--- a/story_audio.html
+++ b/story_audio.html
@@ -13,7 +13,7 @@
 <body>
 <div class="sproutpage">
 	<img src="images/sprout.png" id="sprout">
-	<audio src="audio/drawingpoem.mp4" type="audio/mp4s" class="audio" controls/>
+	<audio src="audio/drawingpoem.wav" type="audio/wavs" class="audio" controls/>
 </div>
 
 	</body>
