--- a/stories.html
+++ b/stories.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles/notes.css">
 </head>
 
-  <body>
+  <body class="no_scroll">
 
   	<div class="stories">
   		
